force-app/main/default/objects/Case_Callout__c/Case_Callout__c.object-meta.xml
<CustomObject>
    <label>Case Callout</label>
    <nameField>
        <displayFormat>CL-{YYMM}-{0000}</displayFormat>
        <label>Case Callout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Callouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>