force-app/main/default/objects/Case_Callout__c/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AgentId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Callouts</relationshipName>
    <type>Lookup</type>
</CustomField>