force-app/main/default/objects/Case_Callout__c/fields/Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Request_Sent__c</fullName>
    <label>Request Sent</label>
    <type>DateTime</type>
</CustomField>