force-app/main/default/objects/Case_Callout__c/fields/Response_Duration__c.field-meta.xml
<CustomField>
    <fullName>Response_Duration__c</fullName>
    <label>Response Time</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>