force-app/main/default/objects/Case_Callout__c/fields/Response_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Text__c</fullName>
    <label>Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>